# rene

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/rene/: error.hpp  general_error.hpp  general_result_macro.hpp  general_result_with_optional.hpp  general_result_with_variant.hpp  result.hpp
include/rene/rene_internal/: rene_common.hpp  rene_optional.hpp
src/: error.cpp
test/: rene.test.error.cpp  rene.test.result.cpp  rene.test.result.hpp  rene.test.result_macro.cpp  rene.test.result_macro.hpp  rene.test.result_with_optional.cpp  rene.test.result_with_variant.cpp
